--- a/dotskin-website/src/app/global.css
+++ b/dotskin-website/src/app/global.css
@@ -11,3 +11,9 @@ body {
   height: auto;
   padding-top: 95px;
 }
+
+.testBlock {
+  width: 100%;
+  height: 2000px;
+  border: 30px solid black;
+}
