--- a/dotskin-website/src/app/global.css
+++ b/dotskin-website/src/app/global.css
@@ -1,5 +1,5 @@
 body {
-  background-color: white;
+  background-color: rgb(116, 175, 217);
   color: black;
 }
 
@@ -16,4 +16,5 @@ body {
   width: 100%;
   height: 2000px;
   border: 30px solid black;
+  background-color: red;
 }
