--- a/dotskin-website/src/components/Navbar/Navbar.css
+++ b/dotskin-website/src/components/Navbar/Navbar.css
@@ -26,7 +26,7 @@
 }
 
 .dNavLinks {
-  width: 100%;
+  width: 500px;
   margin: 0 auto;
   margin-top: -70px;
   position: relative;
@@ -74,7 +74,7 @@
 
 /* Hover Effect */
 .NavLeftBtn:hover {
-  background-color: #c0d2ab; /* Slightly darker shade */
+  background-color: #dcf3c3; /* Slightly darker shade */
   transform: scale(1.05); /* Slightly enlarge the button */
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
 }
@@ -204,4 +204,41 @@
 
 .mNavItem {
   text-align: center;
+}
+
+.mNotifyContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 60px;
+  position: fixed;
+  transition:
+    opacity 0.5s ease-in-out,
+    transform 0.5s ease-in-out;
+  opacity: 0;
+  transform: translateY(-20px);
+}
+
+.mNotifyContainer.open {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.dNotifyContainer {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  margin-top: 60px;
+  padding-right: 52px;
+  position: fixed;
+  transition:
+    opacity 0.5s ease-in-out,
+    transform 0.5s ease-in-out;
+  opacity: 0;
+  transform: translateY(-20px);
+}
+
+.dNotifyContainer.open {
+  opacity: 1;
+  transform: translateY(0);
 }
