--- a/dotskin-website/src/app/global.css
+++ b/dotskin-website/src/app/global.css
@@ -1,6 +1,19 @@
-body {
-  background-color: rgb(116, 175, 217);
-  color: black;
+/* font-family: var(--font-abhaya-libre), sans-serif; */
+/* font-family: var(--font-inter), sans-serif; */
+
+html body {
+}
+
+@media screen and (min-width: 1151px) {
+  .clientWebsiteContent {
+    /* padding-top: 120px; */
+  }
+}
+
+@media screen and (min-width: 0px) and (max-width: 1150px) {
+  .clientWebsiteContent {
+    /* padding-top: 110px; */
+  }
 }
 
 .clientWebsiteContainer {
@@ -8,8 +21,8 @@ body {
 
 .clientWebsiteContent {
   width: 100%;
-  height: auto;
-  padding-top: 95px;
+  height: 100vh;
+  overflow-y: auto;
 }
 
 .testBlock {
@@ -17,4 +30,46 @@ body {
   height: 2000px;
   border: 30px solid black;
   background-color: red;
+}
+
+.fancyGreenButton {
+  display: inline-flex;
+  padding: var(--Space-200, 8px) 22px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 22px;
+  background: #95b878;
+  color: #fff;
+  font-family: var(--font-abhaya-libre), sans-serif;
+  font-size: 15px;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 173.333% */
+  letter-spacing: 0.46px;
+  text-transform: uppercase;
+  position: relative; /* Needed for the pseudo-element */
+  overflow: hidden; /* Hide overflow for pseudo-element */
+  transition:
+    background 0.3s ease,
+    transform 0.3s ease,
+    box-shadow 0.3s ease; /* Smooth transition */
+}
+
+.fancyGreenButton::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 300%;
+  height: 300%;
+  background: rgba(255, 255, 255, 0.2); /* Light overlay */
+  border-radius: 50%; /* Circular overlay */
+  transform: translate(-50%, -50%) scale(0); /* Initially scaled down */
+  transition: transform 0.4s ease; /* Smooth transition for the overlay */
+}
+
+.fancyGreenButton:hover::after {
+  transform: translate(-50%, -50%) scale(1);
 }
