--- a/dotskin-website/src/components/Navbar/Navbar.css
+++ b/dotskin-website/src/components/Navbar/Navbar.css
@@ -21,12 +21,13 @@
   height: 100px;
   background-image: url("../../app/assets/navLogo.png");
   background-size: contain;
+  background-repeat: no-repeat;
   margin-top: 50px;
   margin-left: 30px;
 }
 
 .dNavLinks {
-  width: 500px;
+  width: 550px;
   margin: 0 auto;
   margin-top: -70px;
   position: relative;
@@ -193,8 +194,23 @@
   height: 400px;
 }
 
+.navActive {
+  text-decoration: underline;
+}
+
+ol,
+ul {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .mNavs {
+  margin: 0 auto;
   margin-top: 60px;
+}
+
+.mobileNavs {
+  width: 100%;
 }
 
 .mBottom {
