--- a/dotskin-website/src/app/checkout/checkout.css
+++ b/dotskin-website/src/app/checkout/checkout.css
@@ -21,12 +21,6 @@
   background-color: white;
 }
 
-.cartPrimarySplitter {
-  width: 100%;
-  height: 2px;
-  background-color: #c9c9c9;
-}
-
 .cartItemHeaderTitle {
   color: #c9c9c9;
   font-family: var(--font-abhaya-libre), sans-serif;
@@ -36,25 +30,10 @@
   line-height: normal;
 }
 
-.CPIbody {
+.cartPrimarySplitter {
   width: 100%;
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 9px;
-  background-color: #f3f3f3;
-  margin-bottom: 10px;
-}
-
-.PCIimage {
-  width: 95px;
-  height: 95px;
-  border-radius: 5px;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-color: white;
+  height: 2px;
+  background-color: #c9c9c9;
 }
 
 .cartTotalTable {
@@ -89,4 +68,32 @@
 .cartFinalButton {
   border-radius: 50px;
   margin-bottom: 5px;
+}
+
+.checkoutDeliveryCard {
+  border: 2px dashed #d2d2d2;
+}
+
+.checkoutFormGroup {
+  margin-bottom: 10px;
+}
+
+/* Table */
+.cartTotalTable {
+  width: 100%;
+}
+
+.tableRow {
+  display: flex;
+  width: 100%;
+  height: auto;
+}
+
+.tableCol.label {
+  width: 40%;
+}
+
+.tableCol.value {
+  width: 60%;
+  font-weight: bold;
 }
