--- a/dotskin-website/src/app/admin/adminscreens.css
+++ b/dotskin-website/src/app/admin/adminscreens.css
@@ -172,3 +172,12 @@
 .forgot-password-link:hover {
   text-decoration: underline;
 }
+
+.CMSHeaderControls {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.CMSHeaderControlContainer {
+  margin: 10px;
+}
